--- a/index.html
+++ b/index.html
@@ -133,11 +133,12 @@
 				</div>
 				<div class="features-list-item-media"></div>
 			</div>
-		</div>
 
-	</div>
+		</div><!-- features-list -->
 
-</section>
+	</div><!-- container -->
+
+</section><!-- features -->
 	
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="assets/js/scripts.js"></script>
